# microgrid-llm-coordination

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
configs/scenarios/: 24h_real.yaml  24h_resstock.yaml  24h_resstock_outage.yaml  24h_uniform.yaml  haves_havenots.yaml  haves_havenots__all.yaml  haves_havenots__comm.yaml  haves_havenots__defectors.yaml  haves_havenots__llm.yaml  haves_havenots__noise.yaml  long_outage_72h.yaml  overnight_outage_hard.yaml  synthetic_lp_smoke.yaml  synthetic_smoke.yaml
docs/: overview.md
docs/advisor-emails/: 2026-06-14-phase2-update.md
reference_runs/: README.md
scripts/: compare.py  fetch_data.py  plot_phase1_results.py  run.py
sim/: data.py  engine.py  household.py  logging.py  network.py  scenario.py  types.py
sim/adapters/: nrel_solar.py  pecan_street.py  resstock.py
sim/agents/: __init__.py  (+8 more)
tests/: conftest.py  test_adapters.py  test_agent.py  test_agents_package.py  test_cache.py  test_compare.py  test_data.py  test_engine.py  test_engine_message_bus.py  test_failure_cell_scenarios.py  test_failure_modes.py  test_household.py  test_integration.py  test_llm_agent_failure_axes.py  test_llm_agent_integration.py  test_llm_agent_replay.py  test_llm_client.py  test_logging.py  test_logging_phase2.py  test_lp_optimal.py  test_memory.py  test_network.py  test_physics_smoke.py  test_policy.py  test_protocol.py  test_reflection.py  test_scenario.py  test_strategies.py  test_strategy_llm_agent.py  test_stress_scenarios.py  test_types.py
(+24 files in other folders)
