[project]
name = "microgrid-sim"
version = "0.1.0"
description = "LLM-agent peer-to-peer coordination simulator for residential microgrids."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
data = ["pandas>=2.2", "pyarrow>=16.0", "requests>=2.32"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11", "types-pyyaml>=6.0", "pre-commit>=4.0"]

[tool.setuptools.packages.find]
include = ["sim*"]
namespaces = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["sim"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
